--- a/style.css
+++ b/style.css
@@ -23,11 +23,31 @@ body {
   padding-top: 100%;
   position: relative;
 }
+
+img {
+    width: 70%;
+    height: auto;
+	margin: auto;
+	display: block;
+}
+
 .img{
   
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.flex-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.flex-container > div {
+	margin: 15px;
+	text-align: center;
+	line-height: 15px;
 }
 
 .text {
