--- a/style.css
+++ b/style.css
@@ -25,10 +25,15 @@ body {
 }
 
 img {
-    width: 70%;
+    width: 60%;
     height: auto;
 	margin: auto;
 	display: block;
+}
+
+p {
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 .img{
