--- a/style.css
+++ b/style.css
@@ -34,15 +34,16 @@ code {
 }
 
 img {
-    width: 60%;
-    height: auto;
+	width: 40%;
+    height: 40%;
+	object-fit: contain;
 	margin: auto;
 	display: block;
 }
 
 video {
-    width: 60%;
-    height: auto;
+    max-width: 50%;
+    max-height: 40%;
 	margin: auto;
 	display: block;
 }
