--- a/style.css
+++ b/style.css
@@ -34,11 +34,9 @@ code {
 }
 
 img {
-	/*width: 40%;
+	width: 40%;
     height: 40%;
-	object-fit: contain;*/
-	max-height: auto;
-	max-width: 50%;
+	object-fit: contain;
 	margin: auto;
 	display: block;
 }
